--- a/index.html
+++ b/index.html
@@ -490,11 +490,7 @@
         <div class="modal-content">
             <button class="modal-close" id="modalClose">&times;</button>
             <div class="video-container">
-                <video id="demoVideo" controls>
-                    <source src="assets/videos/IMG_1736.MOV" type="video/mp4">
-                    <source src="assets/videos/demo-video.webm" type="video/webm">
-                    Tarayıcınız video oynatmayı desteklemiyor.
-                </video>
+                <iframe id="demoIframe" src="https://youtu.be/VoXJJotmkEI" title="Demo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
     </div>
