--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <meta name="apple-mobile-web-app-title" content="Harç">
     
     <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon.png">
     
