Performance iyileştirmeleri: WebP görseller (70-97% küçültme), kontrast düzeltmeleri, picture element

--- a/index.html
+++ b/index.html
@@ -184,7 +184,10 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="/" aria-label="Harç Ana Sayfa">
-                    <img src="assets/images/logo.png" alt="Harç İnşaat Muhasebe Yazılımı Logo" class="logo-img" width="120" height="40" loading="eager">
+                    <picture>
+                        <source srcset="assets/images/logo.webp" type="image/webp">
+                        <img src="assets/images/logo.png" alt="Harç İnşaat Muhasebe Yazılımı Logo" class="logo-img" width="120" height="40" loading="eager">
+                    </picture>
                 </a>
             </div>
             <div class="nav-menu" id="nav-menu">
@@ -217,7 +220,10 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="assets/images/dashboard-mockup.png" alt="Harç İnşaat Muhasebe Yazılımı - Ana Dashboard Ekranı - OCR Fatura Okuma ve Hakediş Takibi" class="hero-mockup" width="800" height="600" loading="eager" fetchpriority="high">
+                <picture>
+                    <source srcset="assets/images/dashboard-mockup.webp" type="image/webp">
+                    <img src="assets/images/dashboard-mockup.png" alt="Harç İnşaat Muhasebe Yazılımı - Ana Dashboard Ekranı - OCR Fatura Okuma ve Hakediş Takibi" class="hero-mockup" width="800" height="600" loading="eager" fetchpriority="high">
+                </picture>
             </div>
         </div>
     </section>
@@ -624,7 +630,10 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="assets/images/harc-beyaz.png" alt="Harç İnşaat Muhasebe Yazılımı - Beyaz Logo" class="footer-logo-img" width="150" height="50" loading="lazy">
+                        <picture>
+                            <source srcset="assets/images/harc-beyaz.webp" type="image/webp">
+                            <img src="assets/images/harc-beyaz.png" alt="Harç İnşaat Muhasebe Yazılımı - Beyaz Logo" class="footer-logo-img" width="150" height="50" loading="lazy">
+                        </picture>
                     </div>
                     <p class="footer-description">İnşaat sektörü için özel geliştirilmiş, yapay zeka destekli muhasebe çözümü.</p>
                 </div>
