--- a/kullanim-kosullari.html
+++ b/kullanim-kosullari.html
@@ -105,6 +105,15 @@
         .back-button:hover {
             gap: 0.8rem;
         }
+        .privacy-link {
+            color: #2E7D32;
+            text-decoration: underline;
+        }
+        .document-date {
+            margin-top: 3rem;
+            padding-top: 2rem;
+            border-top: 1px solid #E5E7EB;
+        }
         @media (max-width: 768px) {
             .legal-content {
                 padding: 30px 20px;
@@ -190,7 +199,7 @@
                 </ul>
 
                 <h2>6. Veri ve Gizlilik</h2>
-                <p>Kullanıcı verilerinin işlenmesi <a href="gizlilik-politikasi.html" style="color: #2E7D32; text-decoration: underline;">Gizlilik Politikamız</a> kapsamında düzenlenir. Temel prensiplerimiz:</p>
+                <p>Kullanıcı verilerinin işlenmesi <a href="gizlilik-politikasi.html" class="privacy-link">Gizlilik Politikamız</a> kapsamında düzenlenir. Temel prensiplerimiz:</p>
                 <ul>
                     <li>Verileriniz güvenli şekilde saklanır</li>
                     <li>KVKK ve ilgili mevzuata uyum sağlanır</li>
@@ -256,7 +265,7 @@
                 <h3>12.3 Tam Anlaşma</h3>
                 <p>Bu koşullar, hizmet kullanımı konusunda taraflar arasındaki tam anlaşmayı oluşturur.</p>
 
-                <p style="margin-top: 3rem; padding-top: 2rem; border-top: 1px solid #E5E7EB;">
+                <p class="document-date">
                     <strong>Bu belge son olarak 1 Ekim 2025 tarihinde güncellenmiştir.</strong>
                 </p>
             </div>
