--- a/gizlilik-politikasi.html
+++ b/gizlilik-politikasi.html
@@ -116,6 +116,14 @@
             margin: 0;
             color: #1F2937;
         }
+        .highlight-box.final-note {
+            margin-top: 3rem;
+        }
+        .document-date {
+            margin-top: 3rem;
+            padding-top: 2rem;
+            border-top: 1px solid #E5E7EB;
+        }
         @media (max-width: 768px) {
             .legal-content {
                 padding: 30px 20px;
@@ -359,11 +367,11 @@
                     <li><strong>Web:</strong> www.harcmuhasebe.com.tr</li>
                 </ul>
 
-                <div class="highlight-box" style="margin-top: 3rem;">
+                <div class="highlight-box final-note">
                     <p><strong>Önemli Hatırlatma:</strong> Kişisel verilerinizin korunması bizim için önceliklidir. Bu politika, KVKK ve ilgili mevzuata tam uyum sağlamak amacıyla hazırlanmıştır. Haklarınızı kullanmak veya sorularınız için bizimle iletişime geçmekten çekinmeyin.</p>
                 </div>
 
-                <p style="margin-top: 3rem; padding-top: 2rem; border-top: 1px solid #E5E7EB;">
+                <p class="document-date">
                     <strong>Bu belge son olarak 1 Ekim 2025 tarihinde güncellenmiştir.</strong>
                 </p>
             </div>
