fix: favicon boyutları optimize edildi ve ICO öncelikli yapıldı - 16x16, 32x32, 180x180 boyutları eklendi

--- a/kullanim-kosullari.html
+++ b/kullanim-kosullari.html
@@ -21,11 +21,12 @@
     <meta property="og:description" content="Harç inşaat muhasebe yazılımı kullanım koşulları ve hizmet şartları.">
     <meta property="og:locale" content="tr_TR">
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <!-- Favicon - Önce ICO sonra PNG -->
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
     <link rel="manifest" href="site.webmanifest">
     
     <!-- Preconnect for Performance -->
