--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         .btn-secondary{background:transparent;color:#059669;border:2px solid #059669}
         
         /* Prevent FOUC */
-        .hero-content{opacity:0;animation:fadeInUp 0.6s ease-out 0.2s forwards}
+        .hero-content{animation:fadeInUp 0.6s ease-out 0.2s forwards}
         @keyframes fadeInUp{from{opacity:0;transform:translateY(30px)}to{opacity:1;transform:translateY(0)}}
         
         /* Mobile Responsive */
