--- a/index.html
+++ b/index.html
@@ -762,7 +762,14 @@
         <div class="modal-content">
             <button class="modal-close" id="modalClose">&times;</button>
             <div class="video-container">
-                <iframe id="demoIframe" src="" data-src="https://youtu.be/VoXJJotmkEI" title="Demo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen loading="lazy"></iframe>
+                <iframe 
+                    id="demoVideo"
+                    src="https://player.vimeo.com/video/1126192631?badge=0&autopause=0&player_id=0&app_id=58479" 
+                    frameborder="0" 
+                    allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
+                    title="Demo Video"
+                    loading="lazy">
+                </iframe>
             </div>
         </div>
     </div>
