--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
             <div class="video-container">
                 <iframe 
                     id="demoVideo"
-                    src="https://player.vimeo.com/video/1126192631?badge=0&autopause=0&player_id=0&app_id=58479" 
+                    src="https://player.vimeo.com/video/1126192631?badge=0&autopause=0&player_id=0&app_id=58479&title=0&byline=0&portrait=0" 
                     frameborder="0" 
                     allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
                     title="Demo Video"
