🔗 Sitemap Link Tüm Sayfalara Eklendi
🐛 Sorun:
- Sadece index.html'de sitemap vardı
- kullanim-kosullari.html ve gizlilik-politikasi.html'de sitemap link yoktu
- Bu sayfalarda sitemap'e erişim sağlanamıyordu

✅ Çözüm:

1. index.html:
   + <link rel="sitemap" type="application/xml" href="https://harcmuhasebe.com.tr/sitemap.xml">

2. kullanim-kosullari.html:
   + <link rel="sitemap" type="application/xml" href="https://harcmuhasebe.com.tr/sitemap.xml">

3. gizlilik-politikasi.html:
   + <link rel="sitemap" type="application/xml" href="https://harcmuhasebe.com.tr/sitemap.xml">

📊 Yerleştirme:
- Twitter meta etiketlerinden sonra
- Geo tags'den önce
- Tüm sayfalarda tutarlı konum

🎯 Sonuç:
- Artık TÜM sayfalarda sitemap referansı var
- Arama motorları her sayfadan sitemap'e erişebilir
- SEO best practice uygulandı
- Tutarlı head yapısı sağlandı

--- a/gizlilik-politikasi.html
+++ b/gizlilik-politikasi.html
@@ -21,6 +21,9 @@
     <meta property="og:description" content="Harç inşaat muhasebe yazılımı gizlilik politikası ve kişisel verilerin korunması.">
     <meta property="og:locale" content="tr_TR">
     
+    <!-- Sitemap Link -->
+    <link rel="sitemap" type="application/xml" href="https://harcmuhasebe.com.tr/sitemap.xml">
+    
     <!-- Favicon - Önce ICO sonra PNG -->
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
