--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <meta property="twitter:description" content="İnşaat sektörü için özel geliştirilmiş yapay zeka destekli muhasebe yazılımı. OCR ile otomatik fatura okuma, hakediş takibi ve akıllı raporlama.">
     <meta property="twitter:image" content="https://harcmuhasebe.com.tr/assets/images/dashboard-mockup.png">
     
+    <!-- Sitemap Link -->
+    <link rel="sitemap" type="application/xml" href="https://harcmuhasebe.com.tr/sitemap.xml">
+    
     <!-- Geo Tags -->
     <meta name="geo.region" content="TR">
     <meta name="geo.placename" content="İstanbul">
