--- a/kullanim-kosullari.html
+++ b/kullanim-kosullari.html
@@ -21,6 +21,9 @@
     <meta property="og:description" content="Harç inşaat muhasebe yazılımı kullanım koşulları ve hizmet şartları.">
     <meta property="og:locale" content="tr_TR">
     
+    <!-- Sitemap Link -->
+    <link rel="sitemap" type="application/xml" href="https://harcmuhasebe.com.tr/sitemap.xml">
+    
     <!-- Favicon - Önce ICO sonra PNG -->
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
