--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Harç - Yapay Zeka ile İnşaat Muhasebe Yazılımı | OCR ve Akıllı Raporlama</title>
     <meta name="title" content="Harç - Yapay Zeka ile İnşaat Muhasebe Yazılımı | OCR ve Akıllı Raporlama">
     <meta name="application-name" content="Harç">
-    <meta name="description" content="İnşaat sektörü için özel geliştirilmiş yapay zeka destekli muhasebe yazılımı. OCR ile otomatik fatura okuma, hakediş takibi, akıllı raporlama, mobil uygulama ve 7/24 AI chatbot desteği ile projelerinizi yönetin.">
+    <meta name="description" content="İnşaat muhasebe yazılımı Harç: OCR fatura okuma, hakediş takibi, akıllı raporlama ve 7/24 AI chatbot.">
     <meta name="keywords" content="inşaat muhasebe yazılımı, yapay zeka muhasebe, OCR fatura okuma, hakediş takibi, inşaat proje yönetimi, inşaat maliyet takibi, e-fatura entegrasyonu, puantaj sistemi, taşeron yönetimi, şantiye yönetimi, muhasebe otomasyon, AI chatbot muhasebe">
     <meta name="robots" content="index, follow">
     <meta name="language" content="Turkish">
@@ -26,7 +26,7 @@
     <meta property="og:url" content="https://harcmuhasebe.com.tr/">
     <meta property="og:site_name" content="Harç - İnşaat Muhasebe Yazılımı">
     <meta property="og:title" content="Harç - Yapay Zeka ile İnşaat Muhasebe Yazılımı">
-    <meta property="og:description" content="İnşaat sektörü için özel geliştirilmiş yapay zeka destekli muhasebe yazılımı. OCR ile otomatik fatura okuma, hakediş takibi ve akıllı raporlama.">
+    <meta property="og:description" content="İnşaat muhasebe yazılımı Harç: OCR fatura okuma, hakediş takibi, akıllı raporlama ve 7/24 AI chatbot.">
     <meta property="og:image" content="https://harcmuhasebe.com.tr/assets/images/dashboard-mockup.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -36,7 +36,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://harcmuhasebe.com.tr/">
     <meta property="twitter:title" content="Harç - Yapay Zeka ile İnşaat Muhasebe Yazılımı">
-    <meta property="twitter:description" content="İnşaat sektörü için özel geliştirilmiş yapay zeka destekli muhasebe yazılımı. OCR ile otomatik fatura okuma, hakediş takibi ve akıllı raporlama.">
+    <meta property="twitter:description" content="İnşaat muhasebe yazılımı Harç: OCR fatura okuma, hakediş takibi, akıllı raporlama ve 7/24 AI chatbot.">
     <meta property="twitter:image" content="https://harcmuhasebe.com.tr/assets/images/dashboard-mockup.png">
     
     <!-- Sitemap Link -->
@@ -645,7 +645,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">İnşaat Projelerinizi Yapay Zeka ile Yönetin</h1>
-                <p class="hero-subtitle">Manuel veri girişini bitirin, hakediş ve maliyet takibini otomatikleştirin. Harç ile zaman kazanın, kârlılığınızı artırın.</p>
+                <p class="hero-subtitle">Manuel veri girişini bitirin, <a href="#features" style="color: #047857; font-weight: 600; text-decoration: underline;">hakediş ve maliyet takibini</a> otomatikleştirin. <a href="#screenshots" style="color: #047857; font-weight: 600; text-decoration: underline;">Harç</a> ile zaman kazanın, kârlılığınızı artırın.</p>
                 <div class="hero-buttons">
                     <a href="#contact-form" class="btn btn-primary btn-large">Hemen Başla</a>
                     <button class="btn btn-secondary btn-large" id="demoBtn">Demoyu İncele</button>
@@ -715,7 +715,7 @@
                         <div class="tab-panel-content">
                             <div class="tab-text">
                                 <h3>Yapay Zeka ile Otomasyon (OCR)</h3>
-                                <p>Faturalarınızın ve fişlerinizin fotoğrafını çekin, gerisini yapay zekaya bırakın. OCR teknolojimiz, bilgileri otomatik olarak okur ve projenize maliyet olarak işler.</p>
+                                <p>Faturalarınızın ve fişlerinizin fotoğrafını çekin, gerisini yapay zekaya bırakın. <a href="#faq" style="color: #059669; text-decoration: underline;">OCR teknolojimiz</a>, bilgileri otomatik olarak okur ve <a href="#screenshots" style="color: #059669; text-decoration: underline;">projenize maliyet olarak işler</a>.</p>
                                 <ul class="feature-list">
                                     <li><i class="fas fa-check"></i> Otomatik fatura okuma</li>
                                     <li><i class="fas fa-check"></i> Akıllı veri sınıflandırma</li>
@@ -734,7 +734,7 @@
                         <div class="tab-panel-content">
                             <div class="tab-text">
                                 <h3>Akıllı Raporlama ve Analiz</h3>
-                                <p>Standart raporların ötesine geçin. Tahmine dayalı analizlerle bütçe aşımlarını önceden görün, akıllı panolarla projenizin nabzını tutun.</p>
+                                <p>Standart raporların ötesine geçin. <a href="#screenshots" style="color: #059669; text-decoration: underline;">Tahmine dayalı analizlerle</a> bütçe aşımlarını önceden görün, akıllı panolarla projenizin nabzını tutun. <a href="#contact-form" style="color: #059669; text-decoration: underline;">Ücretsiz deneyin!</a></p>
                                 <ul class="feature-list">
                                     <li><i class="fas fa-check"></i> Tahmine dayalı analizler</li>
                                     <li><i class="fas fa-check"></i> Gerçek zamanlı KPI'lar</li>
@@ -1114,6 +1114,15 @@
                         </picture>
                     </div>
                     <p class="footer-description">İnşaat sektörü için özel geliştirilmiş, yapay zeka destekli muhasebe çözümü.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Hızlı Linkler</h3>
+                    <div class="footer-quick-links">
+                        <a href="#features" class="footer-link">Özellikler</a>
+                        <a href="#screenshots" class="footer-link">Ekran Görüntüleri</a>
+                        <a href="#faq" class="footer-link">Sık Sorulan Sorular</a>
+                        <a href="#contact-form" class="footer-link">İletişim</a>
+                    </div>
                 </div>
                 <div class="footer-section">
                     <h3>İletişim</h3>
